2002-07-22  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* changer-src/scsi-hpux.c: Add amanda copyright.

2002-07-21  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/uparse.y: Fix compiler warning.

2002-07-21  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amtrmidx.c: Continue if a directory doesn't exist.

2002-07-21  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* man/amanda.8.in (tapecycle): Improve documentation.

2002-07-21  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Works with features.

2002-07-21  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/amfeatures.c (am_feature_to_string): Return the string
	  "UNKNOWNFEATURE" if no features.
	* common-src/amfeatures.c (am_string_to_feature): Return NULL if the
	  string is "UNKNOWNFEATURE".

2002-07-20  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/file.c (debug_agets): line_free was badly set when
	the buffer size in increased.

2002-07-19  John R. Jackson (jrj@purdue.edu)

	* common-src/amanda.h: Fix bad #define.

2002-07-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by
	  David Munro <D.Munro@surrey.ac.uk>

	* common-src/sl.c (new_sl): Alloc (sl_t) instead of (sl_t *).
	  
2002-06-10  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Bug reported by
	  Jonathan R. Johnson <Jonathan.Johnson@MinnetonkaSoftware.com>

	* server-src/reporter.c: Fix psfname filename.

2002-05-27  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/sendbackup.c: Don't do compression if it is server side.
	* client-src/sendbackup-dump.c: Ditto.
	* client-src/sendbackup-gnutar.c: Ditto.

2002-05-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by Manuel Bouyer <bouyer@antioche.lip6.fr>

	* server-src/taper.c (detach_buffers): Fix compilation with mmap.

2002-04-29  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
